# NTUST-OOP-112-2-Project2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/gamedata/: active_skills.json  buff_templates.json  demo_map.json  equipment_templates.json  item_templates.json  passive_skills.json
ftk-cli/: CMakeLists.txt  cli_util.cpp  cli_util.h  main.cpp
ftk-gui/: CMakeLists.txt  gui.cpp  gui.h  main.cpp  view.cpp  view.h
lib-ftk/: Action.cpp  Action.h  Buff.cpp  Buff.h  CMakeLists.txt  Dice.cpp  Dice.h  Entity.cpp  Entity.h  Expr.cpp  Expr.h  GameManager.cpp  GameManager.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Modifier.cpp  Modifier.h  Rect.cpp  Rect.h  Registry.cpp  Registry.h  Serializer.cpp  Serializer.h  Skill.cpp  Skill.h  Vec.h  World.cpp  World.h  combat.cpp  combat.h  defs.h  utils.cpp  utils.h
